--- a/index2.html
+++ b/index2.html
@@ -67,7 +67,7 @@
 			<td>B/up Area </td>
 			<td><input type="text"></td>
 		</tr>
-    </table></form> </br></br>
+    </table> </br></br>
         <table border="1" align="center">
             <tr>
                 <th colspan="3"><h2>Drawing approval</h2></th>
@@ -537,6 +537,116 @@
                 <td><input type="text"></td>
             </tr> 
         </table><br><br>
+        <table border="1" align="center">
+            <tr>
+                <th colspan="5"><h2>ABSTRACT VALUE</h2></th>
+            </tr>
+            <tr>
+                <td  rowspan="2">Part </td>
+                <td colspan="2" rowspan="2">Description </td>
+                <td colspan="2">Value of Adopting</td>
+            </tr>
+            <tr>
+                <td>GLVRs.</td>
+                <td>PMR Rs.</td>
+            </tr>
+            <tr>
+                <td>B</td>
+                <td>Land</td>
+                <td></td>
+                <td><input type="text"></td>
+                <td><input type="text"></td>
+            </tr>
+            <tr>
+                <td>C</td>
+                <td>Building</td>
+                <td></td>
+                <td><input type="text"></td>
+                <td><input type="text"></td>
+            </tr>
+            <tr>
+                <td>D</td>
+                <td>Amenities</td>
+                <td></td>
+                <td><input type="text"></td>
+                <td><input type="text"></td>
+            </tr>
+            <tr>
+                <td>E</td>
+                <td>Services</td>
+                <td></td>
+                <td><input type="text"></td>
+                <td><input type="text"></td>
+            </tr>
+            <tr>
+			<td colspan="2"></td>
+            <td></td>
+			<td>Total</td>
+			<td><input type="text"></td>
+		</tr>
+        </table><br><br>
+        <table>
+            <table border="1" align="center">
+                <tr>
+                    <th colspan="3"><h2>CERTIFICATE</h2></th>
+                </tr>
+                <tr>
+                <td>1</td>
+                <td>It is hereby certified that in my opinion<br>
+                    i] The Present Market Value of the Property    =  `.1,10,54,000/-<br> 
+                   ii] The Realizable Sale Value of the Property   =  `.99,50,000/- <br>
+                  iii] The Forced Sale Value of the Property      =   `.77,50,000/- <br>
+                </td>
+                </tr>
+                <tr>
+                <td>2.</td>
+                <td>Number of Correction deed [s] involved in this property is Nil<br>
+                    The Document for The subject Property in the Opinion of this Valuers the deed dates<br>
+                    Dt.--with Registration Number- -.Registered in the SRO Aurangabad Registrar’s office<br> 
+                 </td>
+                </tr>
+                <tr>
+                    <td>3.</td>
+                    <td>If this property is offered as security, the concerned financial institution is requested<br>
+                        to verify the extent of land shown in this valuation report with respect to the latest legal opinion.<br>
+                     </td>
+                </tr>
+                <tr>
+                    <td>4.</td>
+                    <td>Value varies with the purpose and date of valuation. <br>
+                        This report is not to be referred if the purpose is different other than mentioned in I [1].<br>
+                    </td>
+                </tr>
+                <tr>
+                    <td>5.</td>
+                    <td>The property was inspected on 24/02/2021by MAKARAND RAJENDRA<br>
+                         in the Presence of Owner 
+                    </td>
+                </tr>
+                <tr>
+                    <td>6.</td>
+                    <td>The legal aspects were not considered in this Valuation.</td>
+                </tr>
+                <tr>
+                    <td>7.</td>
+                    <td>This Valuation work has been undertaken by the Valuer based upon the request from 
+                        <br>Branch Canara Bank, S.M.E., Aurangabad.</td>
+                </tr>
+                <tr>
+                    <td>8.</td>
+                    <td>any other details </td>
+                </tr>
+                <tr>
+                    <td></td>
+                    <td>
+                    AKARAND  RAJENDRA,<br>
+					B.E., M.O.V., C.E., F.I.V., M.I.E.<br>
+                    Chartered   Engineer<br>
+                    I.B.B.I., Regd. Valuer<br>
+                    Govt. Regd.  Valuer.<br>
+                   </td>
+                </tr>
+        </table>
 
 	</tbody>
 </table>
